<resources>
    <string name="app_name">MovilEventos4.0.1</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Change the following strings as required -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">4lBqXwZ6TiQw9jZbn7YC7QHsd2cTMkTtCfNop7Ew</string>
    <string name="back4app_client_key">mIt6pUyjVtWGBiOrCs9NeLKZnkIgMUZ7UlhhFlk6</string>


    <!-- Example General settings -->
    <string name="pref_header_general">Configurar eventos</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Datos &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notificaciones</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <!-- descripcion de categorias -->
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="descripcion_todo">Mostrará todos los eventos disponibles de cualquier categoria</string>
    <string name="descripcion_musica">Mostrará todos los eventos disponibles relacionados con música</string>
    <string name="descripcion_teatro">Mostrará todos los eventos disponibles relacionados con teatro</string>
    <string name="descripcion_conferencias">Mostrará todos los eventos disponibles relacionados con conferencias</string>
    <string name="descripcion_danza">Mostrará todos los eventos disponibles relacionados con danzas</string>
    <string name="descripcion_foro">Mostrará todos los eventos disponibles relacionados con foros</string>
    <string name="descripcion_taller">Mostrará todos los eventos disponibles relacionados con talleres</string>
    <string name="descripcion_exposicion">Mostrará todos los eventos disponibles relacionados con exposiciones</string>

    <!-- configuracion de notificaciones -->
    <string name="notificacion_todos">Notificar todos los nuevos eventos existentes</string>
    <string name="notificacion_interes">Notificar todos los nuevos eventos de mi interes</string>

    <string name="pref_usuario">Usuario</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="usuario_id">julen_10</string>
    <string name="correo_usuario">jej@hotmail.com</string>

    <string name="volver">Ir a eventos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_centro_draw">CentroDraw</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_logros_draw">LogrosDraw</string>


</resources>
