<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.prototipo1.proyecto15.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_report_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.example.prototipo1.proyecto15.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />


    <header
        android:fragment="com.example.prototipo1.proyecto15.SettingsActivity$usuarioPreferenceFragment"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/pref_usuario"


        />

    <header
        android:icon="@drawable/ic_keyboard_tab_black_24dp"
        android:title="@string/volver"
        android:id="@+id/back_evento"
        />



</preference-headers>
